Use valueOf instead of Integer constructor.  Findbugs says it's more efficient.